# ytmusic-gtk

./: .gitignore  README.md  client.py  data.py  main.py  pyproject.toml  utils.py
.agents/rules/: code-guideline.md
.agents/skills/project_guidelines/: SKILL.md
.github/workflows/: typecheck.yml
lib/: MPRISController.py  client.py  data.py  player.py  types.py  utils.py
lib/net/: api.py  client.py  yt_client.py
lib/state/: player_state.py  setup_player.py
lib/sys/: MPRISController.py  env.py  mac_dock.py  mac_gi.py  mac_icon.py  mac_media.py  mpris.py  tray.py  tray_process.py  win_gi.py  win_mpv.py
lib/ui/: album_detail.py  app.py  collection_detail.py  explore.py  helpers.py  home.py  main_ui.py  main_window.py  now_playing.py  play_bar.py  play_view.py  search_bar.py  search_page.py  thumbnail.py
lib/ui/components/: item_card.py
