[project]
name = "ytmusic-gtk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.13.3",
    "browser-cookie3>=0.20.1",
    "pycookiecheat>=0.8.0",
    "pydantic>=2.12.5",
    "pygobject>=3.56.0",
    "pyobjc-framework-mediaplayer>=12.1 ; sys_platform == 'darwin'",
    "pyside6>=6.10.2",
    "pywebview>=6.1",
    "reactivex>=4.1.0",
    "yt-dlp[default]>=2026.2.21",
    "ytmusicapi>=1.11.5",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.16.0",
]
